Fixed sizing and alignment of Support page images

--- a/kn-react/src/css/Resources.css
+++ b/kn-react/src/css/Resources.css
@@ -1,8 +1,10 @@
 .support-img {
-    margin-right:5px;
-    margin-bottom:10px;
-    width:100%;
     display:block;
+    width: 330px;
+    height: 120px;
+    justify-content: center;
+    margin:5px auto;
+    
 }
 
 @media only screen and (min-width:600px) {
